--- a/package.json
+++ b/package.json
@@ -2,7 +2,10 @@
     "name": "never_alone_server",
     "version": "1.0.0",
     "description": "",
-    "main": "index.js",
+    "main": "server.js",
+    "prisma": {
+        "schema": "./prisma/schema/"
+    },
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
         "build": "tsc",
@@ -22,17 +25,20 @@
     },
     "homepage": "https://github.com/asraful-devs/Never_Alone_Server#readme",
     "dependencies": {
-        "@prisma/client": "^7.0.1",
+        "@prisma/client": "^6.19.0",
+        "bcrypt": "^6.0.0",
         "cors": "^2.8.5",
         "dotenv": "^17.2.3",
-        "express": "^5.1.0"
+        "express": "^5.1.0",
+        "prisma": "^6.19.0",
+        "zod": "^4.1.13"
     },
     "devDependencies": {
+        "@types/bcrypt": "^6.0.0",
         "@types/cors": "^2.8.19",
         "@types/express": "^5.0.5",
         "@types/node": "^24.10.1",
         "nodemon": "^3.1.11",
-        "prisma": "^6.19.0",
         "ts-node-dev": "^2.0.0",
         "typescript": "^5.9.3"
     }
