--- a/package.json
+++ b/package.json
@@ -27,9 +27,12 @@
     "dependencies": {
         "@prisma/client": "^6.19.0",
         "bcrypt": "^6.0.0",
+        "cloudinary": "^2.8.0",
         "cors": "^2.8.5",
         "dotenv": "^17.2.3",
         "express": "^5.1.0",
+        "http-status": "^2.1.0",
+        "jsonwebtoken": "^9.0.2",
         "prisma": "^6.19.0",
         "zod": "^4.1.13"
     },
@@ -37,6 +40,8 @@
         "@types/bcrypt": "^6.0.0",
         "@types/cors": "^2.8.19",
         "@types/express": "^5.0.5",
+        "@types/http-status": "^0.2.30",
+        "@types/jsonwebtoken": "^9.0.10",
         "@types/node": "^24.10.1",
         "nodemon": "^3.1.11",
         "ts-node-dev": "^2.0.0",
