--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
         "@prisma/client": "^6.19.0",
         "bcrypt": "^6.0.0",
         "cloudinary": "^2.8.0",
+        "cookie-parser": "^1.4.7",
         "cors": "^2.8.5",
         "dotenv": "^17.2.3",
         "express": "^5.1.0",
@@ -39,6 +40,7 @@
     },
     "devDependencies": {
         "@types/bcrypt": "^6.0.0",
+        "@types/cookie-parser": "^1.4.10",
         "@types/cors": "^2.8.19",
         "@types/express": "^5.0.5",
         "@types/http-status": "^0.2.30",
