--- a/package.json
+++ b/package.json
@@ -36,6 +36,8 @@
         "jsonwebtoken": "^9.0.2",
         "multer": "^2.0.2",
         "prisma": "^6.19.0",
+        "stripe": "^20.0.0",
+        "uuid": "^13.0.0",
         "zod": "^4.1.13"
     },
     "devDependencies": {
@@ -47,6 +49,7 @@
         "@types/jsonwebtoken": "^9.0.10",
         "@types/multer": "^2.0.0",
         "@types/node": "^24.10.1",
+        "@types/stripe": "^8.0.416",
         "nodemon": "^3.1.11",
         "ts-node-dev": "^2.0.0",
         "typescript": "^5.9.3"
