--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
         "http-status": "^2.1.0",
         "jsonwebtoken": "^9.0.2",
         "multer": "^2.0.2",
+        "node-cron": "^4.2.1",
+        "nodemailer": "^7.0.11",
         "prisma": "^6.19.0",
         "stripe": "^20.0.0",
         "uuid": "^13.0.0",
@@ -49,6 +51,7 @@
         "@types/jsonwebtoken": "^9.0.10",
         "@types/multer": "^2.0.0",
         "@types/node": "^24.10.1",
+        "@types/nodemailer": "^7.0.4",
         "@types/stripe": "^8.0.416",
         "nodemon": "^3.1.11",
         "ts-node-dev": "^2.0.0",
