render deploy basic setup

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,14 @@
-node_modules/
+node_modules
+# Keep environment variables out of version control
 .env
+
+/generated/prisma
+
+.vercel
+
 dist/
+.env
+.env.local
+uploads/*
+!uploads/.gitkeep
+*.log
