--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
         "test": "echo \"Error: no test specified\" && exit 1",
         "build": "tsc",
         "start": "node dist/server.js",
-        "dev": "ts-node-dev --respawn --transpile-only src/server.ts"
+        "dev": "ts-node-dev --respawn --transpile-only src/server.ts",
+        "postinstall": "prisma generate --schema=./prisma/schema"
     },
     "repository": {
         "type": "git",
